...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_an_event_text"
        app:layout_constraintVertical_chainStyle="packed" />

    <!-- Event Name Field -->
    <EditText
        android:id="@+id/event_name_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter event name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_name_text"
        app:layout_constraintTop_toTopOf="@+id/event_name_text" />
...
        android:text="Event Description*"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_name_field" />

    <!-- Event Description Field -->
    <EditText
        android:id="@+id/event_description_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter event description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_description_text"
        app:layout_constraintTop_toTopOf="@+id/event_description_text" />
...
        android:text="Event Date*"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/event_description_field" />

    <!-- Event Date Field -->
    <EditText
        android:id="@+id/event_date_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="2024-12-23"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/event_date_text"
        app:layout_constraintTop_toTopOf="@+id/event_date_text" />
...
    <TextView
        android:id="@+id/geolocation_requirement_text"
        android:layout_width="wrap_content"
        android:layout_height="26dp"
        android:layout_marginStart="8dp"
        android:text="Geolocation Required"
        app:layout_constraintBottom_toBottomOf="@+id/geolocation_requirement_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/geolocation_requirement_switch" />

    <Switch
        android:id="@+id/geolocation_requirement_switch"
        android:layout_width="50dp"
...

    <TextView
        android:id="@+id/waitlist_capacity_required_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Waitlist Capacity Required"
        app:layout_constraintBottom_toBottomOf="@+id/waitlist_capacity_required_switch"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/waitlist_capacity_required_switch" />

    <Switch
        android:id="@+id/waitlist_capacity_required_switch"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toEndOf="@+id/waitlist_capacity_required_text"
        app:layout_constraintTop_toBottomOf="@+id/geolocation_requirement_switch" />

    <!-- Waitlist Capacity Field -->
    <EditText
        android:id="@+id/waitlist_capacity_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Enter waitlist capacity"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
        android:text="Number of Attendees*"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/waitlist_capacity_field" />

    <!-- Number of Attendees Field -->
    <EditText
        android:id="@+id/number_of_attendees_field"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Enter number of attendees"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/number_of_attendees_text"
...
        android:textSize="12sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_attendees_field" />

    <!-- Submit Button -->
    <Button
        android:id="@+id/event_creation_submit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_button"

...
