...
    <Button
        android:id="@+id/participantsButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button"

        android:text="Participants"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/event_details_text_view"
        android:layout_width="0dp"
...
        android:layout_margin="32dp"
        android:layout_marginTop="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonNewPosterEventDetail">

        <Button
            android:id="@+id/button_ed_msgEntrants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"

            android:background="@drawable/rounded_button"
            android:text="Message Entrants" />

        <Button
            android:id="@+id/button_sample_entrants"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:layout_weight="1"
            android:background="@drawable/rounded_button"
...
