...
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        app:tabIndicatorColor="@android:color/white"
        app:tabSelectedTextColor="@android:color/white" />

    <!-- ViewPager2 -->
    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/createEventButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout" />

    <!-- Back Button -->
    <Button
...
